added the changes of github url and meet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="hero-title">Aditya Saraf</h1>
+                <h1 class="hero-title">Aditya Kumar</h1>
                 <p class="hero-subtitle">Cloud & DevOps Specialist | SRE | Azure Expert</p>
                 <p class="hero-description">Building scalable, reliable, and secure cloud infrastructure</p>
                 <div class="hero-buttons">
@@ -266,9 +266,13 @@
                     <i class="fab fa-linkedin"></i>
                     <span>LinkedIn Profile</span>
                 </a>
-                <a href="https://github.com" target="_blank" class="contact-item">
+                <a href="https://github.com/aditya493" target="_blank" class="contact-item">
                     <i class="fab fa-github"></i>
                     <span>GitHub Profile</span>
+                </a>
+                <a href="https://calendar.app.google/LWJfShHN7A8zrNms7" target="_blank" class="contact-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Schedule a Meeting</span>
                 </a>
             </div>
             <a href="mailto:adityasaraf64@gmail.com" class="btn btn-primary">Send Me an Email</a>
@@ -278,7 +282,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2026 Aditya Saraf. All rights reserved.</p>
+            <p>&copy; 2026 Aditya Kumar. All rights reserved.</p>
             <div class="footer-links">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
