--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1 class="hero-title">Aditya Kumar</h1>
+                <p class="hero-keywords">Cloud | DevSecOps | SRE</p>
                 <p class="hero-subtitle">Cloud & DevOps Specialist | SRE | Azure Expert</p>
                 <p class="hero-description">Building scalable, reliable, and secure cloud infrastructure</p>
                 <div class="hero-buttons">
@@ -202,7 +203,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1633356122544-f134324ef6db?w=400&h=250&fit=crop" alt="DevSecOps Pipeline">
+                        <img src="images/devsecops.jpg" alt="DevSecOps Pipeline">
                     </div>
                     <div class="project-content">
                         <h3>DevSecOps Pipeline Implementation</h3>
@@ -217,7 +218,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=400&h=250&fit=crop" alt="Kubernetes Infrastructure">
+                        <img src="images/kubernetes.jpg" alt="Kubernetes Infrastructure">
                     </div>
                     <div class="project-content">
                         <h3>Azure Kubernetes Services (AKS) Management</h3>
@@ -232,7 +233,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551431009-381d36ac3a14?w=400&h=250&fit=crop" alt="Monitoring & Observability">
+                        <img src="images/monitoring.jpg" alt="Monitoring & Observability">
                     </div>
                     <div class="project-content">
                         <h3>Monitoring & Observability Stack</h3>
