--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">AK</div>
+            <div class="logo">Aditya's Portfolio</div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -29,7 +29,6 @@
             <div class="hero-text">
                 <h1 class="hero-title">Aditya Kumar</h1>
                 <p class="hero-keywords">Cloud | DevSecOps | SRE</p>
-                <p class="hero-subtitle">Cloud & DevOps Specialist | SRE | Azure Expert</p>
                 <p class="hero-description">Building scalable, reliable, and secure cloud infrastructure</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
@@ -203,7 +202,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/devsecops.jpg" alt="DevSecOps Pipeline">
+                        <img src="./images/devsecops.webp" alt="DevSecOps Pipeline">
                     </div>
                     <div class="project-content">
                         <h3>DevSecOps Pipeline Implementation</h3>
@@ -218,7 +217,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/kubernetes.jpg" alt="Kubernetes Infrastructure">
+                        <img src="./images/Kubernetes-logo.jpg" alt="Kubernetes Infrastructure">
                     </div>
                     <div class="project-content">
                         <h3>Azure Kubernetes Services (AKS) Management</h3>
@@ -233,7 +232,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="images/monitoring.jpg" alt="Monitoring & Observability">
+                        <img src="./images/monitoring.png" alt="Monitoring & Observability">
                     </div>
                     <div class="project-content">
                         <h3>Monitoring & Observability Stack</h3>
