added the changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-shape">
-                    <img src="mypic.jpg" alt="Profile">
+                    <img src="images/my-logo.jpg" alt="Profile">
                 </div>
             </div>
         </div>
